samples/_failures_safe/1761311113_f28ffb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d89eb221.c: In function ‘main’:
./samples/SAFE/__tmp_d89eb221.c:146:20: error: missing terminating " character
  146 |             printf("Invalid level. Showing
      |                    ^~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_d89eb221.c:146:13: error: expected expression at end of input
  146 |             printf("Invalid level. Showing
      |             ^~~~~~
./samples/SAFE/__tmp_d89eb221.c:146:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d89eb221.c:146:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_d89eb221.c:146:13: error: expected declaration or statement at end of input
